--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -6,10 +6,10 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
 </head>
 <body>
-
+<header th:insert="blocks/header :: header"></header>
 <div>
     <h1 th:text="${title}"/>
 </div>
-
+<div th:insert="blocks/footer :: footer"></div>
 </body>
 </html>
