--- a/src/main/resources/templates/blog-main.html
+++ b/src/main/resources/templates/blog-main.html
@@ -6,13 +6,14 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
 </head>
 <body>
-
+<header th:insert="blocks/header :: header"></header>
 
 <div class="container mt-5">
     <h1>Блог сайта</h1>
+
 </div>
 
-
+<div th:insert="blocks/footer :: footer"></div>
 
 </body>
 </html>
