connecting a database for writing posts to a site section

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
 </head>
 <body>
-
+<header th:insert="blocks/header :: header"></header>
 <main role="main">
 
     <section class="jumbotron text-center">
@@ -221,6 +221,6 @@
     </div>
 
 </main>
-
+<div th:insert="blocks/footer :: footer"></div>
 </body>
 </html>
